--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,7 @@ html, body {
   margin: 0;
   height: 100%;
 }
+
+body {
+  background-color: #0f0e11 !important;
+}
